--- a/README.rdoc
+++ b/README.rdoc
@@ -53,7 +53,7 @@ sudo gem install riakrest
   end
 
   remy = Person.new(:name => 'remy',:age => 10) #            (auto-post)
-  puts remy.name                                # => "remy"  (auto-update)
+  puts remy.name                                # => "remy"
 
   puts Person.get('remy').name                  # => "remy"  (from Jiak server)
   puts Person.get('remy').age                   # => 10      (from Jiak server)
@@ -62,9 +62,9 @@ sudo gem install riakrest
   puts Person.get('remy').age                   # => 11      (from Jiak server)
 
   callie = Person.new(:name => 'Callie', :age => 13)
-  remy.link(callie,'sister')
+  remy.link(callie,'sister')                    # link from remy to callie
 
-  sisters = remy.query(Person,'sister')
+  sisters = remy.query(Person,'sister')         # use link to get 'sister'
   puts sisters[0].eql?(callie)                  # => true
 
   remy.delete
