--- a/README.rdoc
+++ b/README.rdoc
@@ -10,10 +10,11 @@ store.
 == RIAK:
 
 Riak[http://riak.basho.com] is an open-source project developed and maintained
-by the fine folks at Basho[http://www.basho.com]. It combines a decentralized
-key-value store, a flexible map/reduce engine, and a friendly HTTP/JSON query
-interface to provide a database ideally suited for Web applications. RiakRest
-interacts with the HTTP/JSON query interface, which is called Jiak.
+by the fine folks at Basho[http://www.basho.com] Technologies. Riak combines a
+decentralized key-value store, a flexible map/reduce engine, and a friendly
+HTTP/JSON query interface to provide a database ideally suited for Web
+applications. RiakRest interacts with the HTTP/JSON query interface, which is
+called Jiak.
 
 == SYNOPSIS:
 
@@ -25,7 +26,7 @@ of the Core Client that gives a true RESTful feel.
 
 == REQUIREMENTS:
 
-RestClient is used for REST server interaction
+RestClient is used for REST server interaction.
 
 JSON is used for data exchange.
 
@@ -40,32 +41,21 @@ sudo gem install riakrest
   require 'riakrest'
   include RiakRest
 
-  PersonData = JiakDataHash.create(:name,:age)
-  PersonData.keygen :name
-
-  class Person
+  class People
     include JiakResource
-    server      'http://localhost:8002/jiak'
-    group       'people'
-    data_class  PersonData
-    auto_post   true
-    auto_update true
+    server 'http://localhost:8002/jiak'
+    jattr_accessor :name, :age
+    auto_manage
   end
 
-  remy = Person.new(:name => 'remy',:age => 10) #            (auto-post)
-  puts remy.name                                # => "remy"
+  remy = People.new(:name => 'Remy',:age => 10)    # (auto-post)
+  remy.age = 11                                    # (auto-update)
 
-  puts Person.get('remy').name                  # => "remy"  (from Jiak server)
-  puts Person.get('remy').age                   # => 10      (from Jiak server)
+  callie = People.new(:name => 'Callie', :age => 13)
+  remy.link(callie,'sister')
 
-  remy.age = 11                                 #            (auto-update)
-  puts Person.get('remy').age                   # => 11      (from Jiak server)
-
-  callie = Person.new(:name => 'Callie', :age => 13)
-  remy.link(callie,'sister')                    # link from remy to callie
-
-  sisters = remy.query(Person,'sister')         # use link to get 'sister'
-  puts sisters[0].eql?(callie)                  # => true
+  sisters = remy.query(People,'sister')
+  puts sisters[0].eql?(callie)                     # => true
 
   remy.delete
   callie.delete
