--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 0.1.6 2009-12-17
+  - Add method for specifying data conversion in JiakData and JiakResouce.
+  - Add testing and examples for data conversion.
+
 === 0.1.5 2009-12-11
   - Added POV processing.
   - Refactored jattr_* to attr_*.
